tests/int/why_command/snapshots/integration__int__why_command__basic__should_why_for_fixture_crate.snap
---
source: tests/int/why_command/basic.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - why
    - engine
    - config
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
