tests/int/why_command/snapshots/integration__int__why_command__basic__should_why_for_own_crate.snap
---
source: tests/int/why_command/basic.rs
info:
  program: crawk
  args:
    - why
    - analyzer
    - reference
---
success: true
exit_code: 0
----- stdout -----
crate::reference::GroupItem
crate::reference::PathPrefix
crate::reference::PathSuffix
crate::reference::TypeReference

----- stderr -----
