tests/int/why_command/snapshots/integration__int__why_command__basic__should_why_no_dependency.snap
---
source: tests/int/why_command/basic.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - why
    - config
    - engine
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
