tests/int/why_command/snapshots/integration__int__why_command__basic__should_why_no_dependency_own_crate.snap
---
source: tests/int/why_command/basic.rs
info:
  program: crawk
  args:
    - why
    - constants
    - analyzer
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
