tests/int/why_command/snapshots/integration__int__why_command__basic__should_why_own_crate_lib_fallback.snap
---
source: tests/int/why_command/basic.rs
info:
  program: crawk
  args:
    - why
    - main
    - lib
---
success: true
exit_code: 0
----- stdout -----
crawk::AnalysisOptions
crawk::Analyzer
crawk::AnnotatedEdges
crawk::CheckOptions
crawk::DependencyGraph
crawk::DependencyGraphOptions

----- stderr -----
