tests/int/why_command/snapshots/integration__int__why_command__basic__should_why_own_crate_pkg_name_ref.snap
---
source: tests/int/why_command/basic.rs
info:
  program: crawk
  args:
    - why
    - main
    - version
---
success: true
exit_code: 0
----- stdout -----
crawk::version
crawk::version::NAME
crawk::version::VERSION

----- stderr -----
